@@ -2399,7 +2399,7 @@ do_page(gpasmVal r, char *name, int arity, struct pnode *parms)
 {
   state.lst.line.linetype = dir;
   if (enforce_arity(arity, 0) && state.lst.enabled)
-    lst_throw();
+    lst_page_start();
 
   return r;
 }
